@startuml

skinparam linetype ortho

interface ISaveSystem<T> {
    +T SaveData { get;}
    +List<string> SaveGameIds { get; }
    +void SaveCurrentSave();
    +void LoadSave(string id);
    +void CreateSave();
}

class T<Serializable>{
}

interface IEncryptionService{
    +byte[] Encrypt(byte[] rawData)
    +byte[] Decrypt(byte[] data) 
} 

interface IDataWriteService{
    + void WriteData(byte[] data, string uri)
}

interface IDataReadService{
    + byte[] ReadData(string uri)
}

interface ISerializationService<T>{
    + byte[] Serialize(T data)
    + T DeSerialize(byte[] rawData)
}
interface IHashService{
    + byte[] HashData(byte[] data)
    + bool ValidateHash(byte[] data, byte[] expectedHash)
}

interface ISaveIOService<T>{
   +List<string> SaveSlotIds { get; }
   +string LastSavedId { get; }
   +bool TryLoadCreate(string id, out T save);
   +bool TryLoad(string id, out T save);
   +void Save(string id, T saveData);
}

interface IUriProvider{
    string MetaDataUri{get;}
    string SaveDataUri{get;}
}

SaveIOService ..> IEncryptionService
SaveIOService ..> IDataWriteService
SaveIOService ..> IDataReadService
SaveIOService ..> IHashService
SaveIOService ..> IUriProvider
SaveIOService ..> ISerializationService
ISaveIOService <|.. SaveIOService
SaveService -> T
ISaveIOService <.. SaveService
ISaveSystem <|.. SaveService
@enduml